fixed  button widths on small resolutions

--- a/public/assets/css/app.css
+++ b/public/assets/css/app.css
@@ -50,3 +50,8 @@ body {
     max-width : 100%;
     height    : auto;
 }
+
+.auto-width-no-max {
+    width  : 100%;
+    height : auto;
+}
